--- a/src/Osu.Music.UI/Resources/Dictionaries/Buttons.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Buttons.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+                    xmlns:proxies="clr-namespace:Osu.Music.UI.Utility.Proxies">
     <Style x:Key="PlayerButtonBase" TargetType="{x:Type Button}">
         <Setter Property="Width" Value="30"/>
         <Setter Property="Height" Value="30"/>
@@ -29,11 +30,7 @@
                     <Condition Property="IsPressed" Value="False"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background">
-                        <Setter.Value>
-                            <SolidColorBrush Color="White" Opacity="0.1"/>
-                        </Setter.Value>
-                    </Setter>
+                    <Setter Property="Background" Value="{DynamicResource SolidColorBrushHover}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
 
@@ -45,7 +42,7 @@
                 <MultiTrigger.Setters>
                     <Setter Property="Background">
                         <Setter.Value>
-                            <SolidColorBrush Color="White" Opacity="0.2"/>
+                            <SolidColorBrush Color="{DynamicResource ColorHover}" Opacity="0.2"/>
                         </Setter.Value>
                     </Setter>
                 </MultiTrigger.Setters>
@@ -81,11 +78,7 @@
                     <Condition Property="IsPressed" Value="False"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background">
-                        <Setter.Value>
-                            <SolidColorBrush Color="White" Opacity="0.1"/>
-                        </Setter.Value>
-                    </Setter>
+                    <Setter Property="Background" Value="{DynamicResource SolidColorBrushHover}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
 
@@ -111,7 +104,7 @@
                 <MultiTrigger.Setters>
                     <Setter Property="Background">
                         <Setter.Value>
-                            <SolidColorBrush Color="White" Opacity="0.2"/>
+                            <SolidColorBrush Color="{DynamicResource ColorHover}" Opacity="0.2"/>
                         </Setter.Value>
                     </Setter>
                 </MultiTrigger.Setters>
@@ -164,11 +157,7 @@
                     <Condition Property="IsPressed" Value="False"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background">
-                        <Setter.Value>
-                            <SolidColorBrush Color="White" Opacity="0.1"/>
-                        </Setter.Value>
-                    </Setter>
+                    <Setter Property="Background" Value="{DynamicResource SolidColorBrushHover}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
 
@@ -190,7 +179,7 @@
                 <MultiTrigger.Setters>
                     <Setter Property="Background">
                         <Setter.Value>
-                            <SolidColorBrush Color="White" Opacity="0.2"/>
+                            <SolidColorBrush Color="{DynamicResource ColorHover}" Opacity="0.2"/>
                         </Setter.Value>
                     </Setter>
                 </MultiTrigger.Setters>
@@ -240,11 +229,7 @@
                     <Condition Property="IsPressed" Value="False"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background">
-                        <Setter.Value>
-                            <SolidColorBrush Color="Black" Opacity="0.1"/>
-                        </Setter.Value>
-                    </Setter>
+                    <Setter Property="Background" Value="{DynamicResource SolidColorBrushHover}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
 
@@ -291,7 +276,7 @@
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
                     <TextBlock VerticalAlignment="Center" FontFamily="{Binding Path=FontFamily, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
                                FontWeight="Medium">
-                        <Run Text="osu."/><Run Text="Music" Foreground="{DynamicResource SolidColorBrushMain}"/>
+                        <Run Text="osu." Foreground="{DynamicResource SolidColorBrushTextHighEmphasis}"/><Run Text="Music" Foreground="{DynamicResource SolidColorBrushMain}"/>
                     </TextBlock>
                 </StackPanel>
             </Setter.Value>
@@ -443,7 +428,7 @@
         <Setter Property="Content">
             <Setter.Value>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
-                    <TextBlock x:Name="Logo" FontFamily="{DynamicResource MaterialIcons}" FontSize="22" Text="&#xe8b6;" VerticalAlignment="Center"/>
+                    <TextBlock x:Name="Logo" FontFamily="{DynamicResource MaterialIcons}" Foreground="{DynamicResource SolidColorBrushTextHighEmphasis}" FontSize="22" Text="&#xe8b6;" VerticalAlignment="Center"/>
                 </StackPanel>
             </Setter.Value>
         </Setter>
@@ -482,11 +467,7 @@
                     <Condition Property="IsPressed" Value="False"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background">
-                        <Setter.Value>
-                            <SolidColorBrush Color="Black" Opacity="0.1"/>
-                        </Setter.Value>
-                    </Setter>
+                    <Setter Property="Background" Value="{DynamicResource SolidColorBrushHover}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
 
@@ -498,7 +479,7 @@
                 <MultiTrigger.Setters>
                     <Setter Property="Background">
                         <Setter.Value>
-                            <SolidColorBrush Color="Black" Opacity="0.2"/>
+                            <SolidColorBrush Color="{DynamicResource ColorHover}" Opacity="0.2"/>
                         </Setter.Value>
                     </Setter>
                 </MultiTrigger.Setters>
@@ -600,32 +581,26 @@
     </Style>
 
     <Style x:Key="TitleBarButtonStyle" TargetType="Button">
-        <Setter Property="Foreground" Value="{DynamicResource WindowTextBrush}" />
+        <Style.Resources>
+            <proxies:ColorProxy x:Key="ForegroundBrushProxy" Data="{DynamicResource ColorForeground}"/>
+        </Style.Resources>
+        <Setter Property="Foreground" Value="{DynamicResource SolidColorBrushTextHighEmphasis}" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border
-					x:Name="border"
-					Background="Transparent"
-					BorderThickness="0"
-					SnapsToDevicePixels="true">
-                        <ContentPresenter
-						x:Name="contentPresenter"
-						Margin="0"
-						HorizontalAlignment="Center"
-						VerticalAlignment="Center"
-						Focusable="False"
-						RecognizesAccessKey="True" />
+                    <Border x:Name="border" Background="Transparent" BorderThickness="0" SnapsToDevicePixels="true">
+                        <ContentPresenter x:Name="contentPresenter" Margin="0" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                          Focusable="False" RecognizesAccessKey="True"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="true">
-                            <Setter TargetName="border" Property="Background" Value="#e5e5e5" />
+                            <Setter TargetName="border" Property="Background" Value="{DynamicResource SolidColorBrushTitleBarHover}" />
                         </Trigger>
                         <Trigger Property="IsPressed" Value="true">
-                            <Setter TargetName="border" Property="Background" Value="#cacacb" />
+                            <Setter TargetName="border" Property="Background" Value="{DynamicResource SolidColorBrushTitleBarPressed}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -634,7 +609,7 @@
     </Style>
 
     <Style x:Key="TitleBarCloseButtonStyle" TargetType="Button">
-        <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+        <Setter Property="Foreground" Value="{DynamicResource SolidColorBrushTextHighEmphasis}" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
         <Setter Property="IsTabStop" Value="False" />
@@ -777,11 +752,7 @@
                     <Condition Property="IsPressed" Value="False"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Foreground">
-                        <Setter.Value>
-                            <SolidColorBrush Color="LightGray"/>
-                        </Setter.Value>
-                    </Setter>
+                    <Setter Property="Foreground" Value="{DynamicResource SolidColorBrushHover}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
 
@@ -793,7 +764,7 @@
                 <MultiTrigger.Setters>
                     <Setter Property="Foreground">
                         <Setter.Value>
-                            <SolidColorBrush Color="DarkGray"/>
+                            <SolidColorBrush Color="{DynamicResource ColorHover}" Opacity="0.2"/>
                         </Setter.Value>
                     </Setter>
                 </MultiTrigger.Setters>
@@ -843,7 +814,7 @@
                 <MultiTrigger.Setters>
                     <Setter Property="Foreground">
                         <Setter.Value>
-                            <SolidColorBrush Color="Black" Opacity="1.0"/>
+                            <SolidColorBrush Color="{DynamicResource ColorHover}" Opacity="1.0"/>
                         </Setter.Value>
                     </Setter>
                 </MultiTrigger.Setters>
