--- a/src/Osu.Music.UI/Resources/Dictionaries/ListViews.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/ListViews.xaml
@@ -1,12 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:m="clr-namespace:Osu.Music.Common.Models;assembly=Osu.Music.Common"
-                    xmlns:d="clr-namespace:Osu.Music.UI.Views.Dialogs">
+                    xmlns:proxies="clr-namespace:Osu.Music.UI.Utility.Proxies">
     <Style x:Key="ListViewBeatmaps" TargetType="{x:Type ListView}">
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Padding" Value="0"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="Background" Value="White"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="{DynamicResource SolidColorBrushMain}"/>
         <Setter Property="ItemContainerStyle">
             <Setter.Value>
@@ -54,6 +54,9 @@
         <Style.Resources>
             <DataTemplate DataType="{x:Type m:Beatmap}">
                 <Grid Name="ItemContainer">
+                    <Grid.Resources>
+                        <proxies:ColorProxy x:Key="ForegroundBrushProxy" Data="{DynamicResource ColorForeground}"/>
+                    </Grid.Resources>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="50"/>
                         <ColumnDefinition Width="{Binding Path=ActualWidth, RelativeSource={RelativeSource AncestorType={x:Type ListView}}, Converter={StaticResource SongTitleColumnConverter}}"/>
@@ -62,10 +65,10 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="50"/>
                     </Grid.RowDefinitions>
-                    <Border CornerRadius="5" Margin="4 0 0 0" Background="#20000000" Width="40" Height="40" HorizontalAlignment="Left">
+                    <Border CornerRadius="5" Margin="4 0 0 0" Background="{Binding Source={StaticResource ForegroundBrushProxy}, Path=Data, Converter={StaticResource ColorWithOpacityConverter}, ConverterParameter=20}" Width="40" Height="40" HorizontalAlignment="Left">
                         <Grid>
                             <TextBlock FontFamily="{DynamicResource MaterialIcons}" FontSize="28" Text="&#xe405;" 
-                                           Foreground="#50000000"
+                                           Foreground="{Binding Source={StaticResource ForegroundBrushProxy}, Path=Data, Converter={StaticResource ColorWithOpacityConverter}, ConverterParameter=50}"
                                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Grid>
                     </Border>
