--- a/src/Osu.Music.UI/Views/CollectionDetailsView.xaml
+++ b/src/Osu.Music.UI/Views/CollectionDetailsView.xaml
@@ -8,6 +8,7 @@
              xmlns:m="clr-namespace:Osu.Music.Common.Models;assembly=Osu.Music.Common"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:behaviors="clr-namespace:Osu.Music.UI.Behaviors"
+             xmlns:proxies="clr-namespace:Osu.Music.UI.Utility.Proxies"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -18,7 +19,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <Border BorderBrush="{DynamicResource SolidColorBrushMainBorder}" BorderThickness="0 0 0 1" Grid.Row="0">
+        <Border BorderBrush="{DynamicResource SolidColorBrushBorder}" BorderThickness="0 0 0 1" Grid.Row="0">
             <DockPanel HorizontalAlignment="Stretch">
                 <Grid DockPanel.Dock="Left" VerticalAlignment="Top" Margin="10 10 0 0">
                     <Rectangle Width="145" Height="145" RadiusX="10" RadiusY="10" Fill="#20000000"/>
@@ -32,7 +33,7 @@
                 </Grid>
                 <StackPanel Margin="10 10 0 0">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Model.Collection.Name}" FontSize="24"/>
+                        <TextBlock Text="{Binding Model.Collection.Name}" Foreground="{DynamicResource SolidColorBrushTextHighEmphasis}" FontSize="24"/>
                     </StackPanel>
                     <TextBlock Text="{Binding Model.Collection.Beatmaps.Count, Converter={StaticResource CountToStringConverter}}" FontFamily="{DynamicResource Poppins}" FontSize="16" FontWeight="Light" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}" Margin="0 0 0 0">
                         <i:Interaction.Behaviors>
@@ -52,6 +53,9 @@
             <ListView.ItemTemplate>
                 <DataTemplate DataType="{x:Type m:Beatmap}">
                     <Grid Name="ItemContainer">
+                        <Grid.Resources>
+                            <proxies:ColorProxy x:Key="ForegroundBrushProxy" Data="{DynamicResource ColorForeground}"/>
+                        </Grid.Resources>
                         <Grid.InputBindings>
                             <MouseBinding Gesture="LeftDoubleClick" 
                                           Command="{Binding DataContext.PlayBeatmapCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:CollectionDetailsView}}}"
@@ -66,10 +70,10 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="50"/>
                         </Grid.RowDefinitions>
-                        <Border CornerRadius="5" Margin="4 0 0 0" Background="#20000000" Width="40" Height="40" HorizontalAlignment="Left">
+                        <Border CornerRadius="5" Margin="4 0 0 0" Background="{Binding Source={StaticResource ForegroundBrushProxy}, Path=Data, Converter={StaticResource ColorWithOpacityConverter}, ConverterParameter=20}" Width="40" Height="40" HorizontalAlignment="Left">
                             <Grid>
                                 <TextBlock FontFamily="{DynamicResource MaterialIcons}" FontSize="28" Text="&#xe405;" 
-                                           Foreground="#50000000"
+                                           Foreground="{Binding Source={StaticResource ForegroundBrushProxy}, Path=Data, Converter={StaticResource ColorWithOpacityConverter}, ConverterParameter=50}"
                                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             </Grid>
                         </Border>
