--- a/src/Osu.Music/Views/MainWindow.xaml
+++ b/src/Osu.Music/Views/MainWindow.xaml
@@ -1,12 +1,10 @@
 ﻿<Window x:Class="Osu.Music.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:prism="http://prismlibrary.com/"
         xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-        prism:ViewModelLocator.AutoWireViewModel="True"
-        WindowStyle="None"
-        Title="{Binding Title}" Height="550" Width="900" MinHeight="550" MinWidth="900" Loaded="Window_Loaded">
+        WindowStyle="None" Title="{Binding Title}"
+        Height="550" Width="900" MinHeight="550" MinWidth="900" Loaded="Window_Loaded">
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="30" ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
     </WindowChrome.WindowChrome>
