--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -25,6 +25,7 @@
     <convert:StringEmptyConverter x:Key="StringEmptyConverter"/>
     <convert:StringToLocalizationCulture x:Key="StringToLocalizationCulture"/>
     <convert:ColorWithOpacityConverter x:Key="ColorWithOpacityConverter"/>
+    <convert:ApplicationThemeToNameConverter x:Key="ApplicationThemeToNameConverter"/>
 
     <flags:CountryIdToFlagImageSourceConverter x:Key="CountryIdToFlagImageSourceConverter"/>
 </ResourceDictionary>
