--- a/src/Osu.Music.UI/Views/SettingsView.xaml
+++ b/src/Osu.Music.UI/Views/SettingsView.xaml
@@ -3,8 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:loc="clr-namespace:Osu.Music.Services.Localization;assembly=Osu.Music.Services"
+             xmlns:behaviors="clr-namespace:Osu.Music.UI.Behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -54,7 +56,11 @@
                             <ComboBox.ItemTemplate>
                                 <DataTemplate DataType="{x:Type loc:LocalizationCulture}">
                                     <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="{Binding Path=.}" Foreground="{DynamicResource SolidColorBrushTextHighEmphasis}" Margin="10 0 0 0"/>
+                                        <TextBlock Text="{Binding Path=., Converter={StaticResource ApplicationThemeToNameConverter}}" Foreground="{DynamicResource SolidColorBrushTextHighEmphasis}" Margin="10 0 0 0">
+                                            <i:Interaction.Behaviors>
+                                                <behaviors:CultureBehavior/>
+                                            </i:Interaction.Behaviors>
+                                        </TextBlock>
                                     </StackPanel>
                                 </DataTemplate>
                             </ComboBox.ItemTemplate>
