Added simple tray icon

--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -5,6 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:tb="http://www.hardcodet.net/taskbar"
              xmlns:prism="http://prismlibrary.com/"
              mc:Ignorable="d" 
              d:DesignHeight="550" d:DesignWidth="900"
@@ -25,6 +26,9 @@
             <RowDefinition Height="20"/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
+        <!--NotifyIcon-->
+        <tb:TaskbarIcon x:Name="MyNotifyIcon" IconSource="pack://application:,,,/Osu.Music.UI;component/Resources/Images/Logo/Logo.ico" ToolTipText="osu.Music" Visibility="Visible"/>
+        
         <!--TitleBar-->
         <Grid Grid.ColumnSpan="2" Panel.ZIndex="1">
             <Grid.ColumnDefinitions>
