Reworked window minimization

--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -26,6 +26,7 @@
     <convert:StringToLocalizationCulture x:Key="StringToLocalizationCulture"/>
     <convert:ColorWithOpacityConverter x:Key="ColorWithOpacityConverter"/>
     <convert:ApplicationThemeToNameConverter x:Key="ApplicationThemeToNameConverter"/>
+    <convert:WindowStateToTrayVisibility x:Key="WindowStateToTrayVisibility"/>
 
     <flags:CountryIdToFlagImageSourceConverter x:Key="CountryIdToFlagImageSourceConverter"/>
 </ResourceDictionary>
